[tool.poetry]
name = "backtest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
pyyaml = "^6.0.1"
plotly = "^5.20.0"
mypy-extensions = "^1.0.0"
numba = "^0.59.0"
dill = "^0.3.8"
imageio = "^2.34.0"
tqdm = "^4.66.2"
schedule = "^1.2.1"
dateparser = "^1.2.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
requests = "^2.31.0"
sqlalchemy = "^2.0.28"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
